--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
 		"php": "^5.4.0 || ^7.0",
-        "symfony/console": "3.0.*",
+        "symfony/console": "^3.0",
         "symfony/finder": "3.0.*",
         "symfony/filesystem": "3.0.*",
         "symfony/process": "3.0.*",
@@ -9,5 +9,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2"
+    },
+    "autoload": {
+        "psr-0": {
+            "Pharaon\\": "src/"
+        }
     }
 }
